syntax = "proto3";

package catalogue;

message CreateFileRequest {
    string dir = 1;
    string name = 2;
    int64 total = 3;
}

message CreateFileResponse {
}

message DeleteFileRequest {
}

message DeleteFileResponse {
}

message GetFileRequest {
}

message GetFileResponse {
}

service CatalogueService {
    rpc create_file(CreateFileRequest) returns (CreateFileResponse) {}
    rpc delete_file(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc get_file(GetFileRequest) returns (GetFileResponse) {}
}
